- Added a JMX subsystem with RMI and HTTP connectors
- Simplified MBean unregistration and added a registration check prior to 
  the unregister attempt (Jira APPSERVER-118)
- "IServerStream" now also supports "pause" and "seek"
- Enabled RMI + SSL for JMX
- Added JMX authentication
- Added Shutdown class for cleanly shutting down a Red5 instance
- Added support for AMF3 in remoting server

Bugfixes:
- "NetStream.Record.Failed" is sent for IO errors that occurred during
  recording (Jira APPSERVER-64)
- fixed possible deadlock if methods are invoked by a connecting client
  on a client that is currently disconnecting (Jira APPSERVER-108)
- fixed NPE when connecting without application given (Jira APPSERVER-116)
- fixed various problems with deserialization of AMF3 objects that implement
  IExternalizable (Jira CODECS-2)
- fixed warning about deprecated Jetty configuration (Jira APPSERVER-115)
- fixed possible deadlock involving PersistableAttributeStore and Scope
  (Jira APPSERVER-122)
- display better message if RMI connection to "rmiregistry" could not
  be established (Jira APPSERVER-125)
- Python scripts can import classes available only in the classpath of a
  webapp (Jira APPSERVER-92)
- fixed Ruby application issue by updating to Spring 2.0.5 and JRuby 0.9.8
  (Jira APPSERVER-93)
- fixed async calling of remoting methods (Jira APPSERVER-131)
- accessing root of RTMPT server no longer results in 404 but redirects to
  HTTP port (Jira APPSERVER-130)
- disconnect clients that don't send a valid handshake (Jira APPSERVER-128)
- reduced max. idle time to prevent too many open sockets when using RTMPT
  with HTTP/1.0 (Jira APPSERVER-87)
- fixed potential NPEs in PlaylistSubscriberStream (Jira SN-40)
- fixed various problems with deserializing AMF0 references in remoting


Red5 0.6    (2007-04-23)
------------------------
New features:
- Recording/playback of files to/from subscopes implemented
  (Jira APPSERVER-103)

Bugfixes: